[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amg-player"
dynamic = ["version"]
description = "Browse & play embedded tracks from Angry Metal Guy music reviews"
readme = "README.md"
license = "GPL-3.0-only"
authors = [{ name = "desbma" }]
keywords = ["music", "metal", "extreme", "angry", "guy", "player", "youtube", "bandcamp", "soundcloud"]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Utilities",
]
dependencies = [
    "cssselect>=1.2.0",
    "curses-menu==0.5.0",
    "lxml>=5.1.0",
    "more_itertools>=10.2.0",
    "mutagen>=1.47.0",
    "Pillow>=10.3.0",
    "platformdirs>=4.2.0",
    "python-magic>=0.4.27",
    "requests>=2.31.0",
    "tqdm>=4.66.4",
    "unidecode>=1.3.8",
    "web_cache>=1.1.0",
    "yt-dlp>= 2026.02.21",
]

[project.scripts]
amg = "amg:cl_main"

[project.urls]
Homepage = "https://github.com/desbma/amg-player"
Repository = "https://github.com/desbma/amg-player"

[tool.hatch.build.targets.wheel]
packages = ["amg"]

[tool.hatch.version]
source = "regex"
path = "amg/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.ruff]
line-length = 120

[dependency-groups]
dev = ["pre-commit", "ruff", "ty"]
